--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,11 +34,20 @@ a, a:visited {
 	color: inherit;
 }
 .maincontain {
-	width: 500px;
+	width: 800px;
 	margin: 0 auto;
 	padding: 70px 20px;
 }
 
+.footer {
+	font-family: sans-serif; color: #fff; font-size: 0.8em;
+	background-color: #000;
+	text-align: center;
+	padding: 10px;
+	width: 100%;
+	bottom: 0;
+	position: fixed;
+}
 
 /* SPLASH PAGE */
 
