--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,27 @@
+/* BODY STYLES */
+
 body {
 	margin: 0;
 	position: relative;
+	font-family: Georgia, serif;
+}
+body.cake {
+	background-repeat: no-repeat;
+	background: #0F2027; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027) fixed;  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027) fixed; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+body.trigger {
+	background-repeat: no-repeat;
+	background: #F0F2F0;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to top, #000C40, #F0F2F0) fixed;  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to top, #000C40, #F0F2F0) fixed; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+body.about {
+	background-repeat: no-repeat;
+	background: #757F9A;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to bottom, #D7DDE8, #757F9A) fixed;  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to bottom, #D7DDE8, #757F9A) fixed; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 h1.wordmark {
@@ -16,20 +37,6 @@ h1.wordmark.splash {
 }
 
 /* COMMON STYLES */
-
-.auto-resizable-iframe > div {
-  position: relative;
-  padding-bottom: 66%;
-  height: 0px;
-}
-
-.auto-resizable-iframe iframe {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-}
 
 .logooutercontain {
 	padding-right: 30px;
@@ -144,12 +151,21 @@ div#static .post p {
 .box a img { border: solid 1px #111; }
 .box a:hover img { border: solid 1px #678bc6; }
 
-/* BLOG */
-
-body {
-	background-color: rgb(243, 241, 233);
-	font-family: Georgia, serif;
+.auto-resizable-iframe > div {
+  position: relative;
+  padding-bottom: 66%;
+  height: 0px;
 }
+
+.auto-resizable-iframe iframe {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+/* BLOG */
 
 h1.subhead {
 	text-align: center;
